	* graprof/function.c: improved error handling for subfunctions in
	function_enter

	* libgraprof/buffer.h: added comments to public declarations
	* libgraprof/highrestimer.h: likewise
	* libgraprof/instrument.h: likewise
	* libgraprof/mallhooks.h: likewise
	* graprof/addr.h: likewise
	* graprof/callgraph.h: likewise
	* graprof/flatprofile.h: likewise
	* graprof/function.h: likewise
	* graprof/memory.h: likewise
	* graprof/memprofile.h: likewise
	* graprof/strtime.h: likewise
	* graprof/trace.h: likewise

	* graprof/memory.h: struct block from memory.c moved here, added
	prototype for an accessor function for the block array contained in
	memory.c
	* graprof/memory.c: removed struct block (now in memory.h), added
	accessor function to block array memory_get_blocks

	* graprof/memory.h: added caller information fields to block struct
	* graprof/memory.c: memory_malloc fills caller information on blocks
	* graprof/memprofile.c: memory profile now includes unfreed blocks

2013-08-26  Andreas Grapentin  <andreas@grapentin.org>

	* graprof/flatprofile.c: fixed profile header and description
	* graprof/flatprofile.c: if call graph and flat profile are enabled,
	print function ids in flat profile

	* graprof/memory.c: fixed allocation tracking bug if already freed
	locations are allocated again
	* graprof/memprofile.c: removed distinction between invalid ptr and
	double free

	* graprof/flatprofile.h: added parameter to tell flatprofile_print to
	enable function id printing
	* graprof/flatprofile.c: implemented the behaviour of this parameter
	* graprof/graprof.c: changed call to flatprofile_print accordingly

2013-08-27  Andreas Grapentin  <andreas@grapentin.org>

	* graprof/function.c: added total function count incremented in
	function_enter, and added accessor function definition
	* graprof/function.h: added declaration
	* graprof/callgraph.c: added print for total function calls
	* graprof/flatprofile.c: added print for total function calls